@@ -719,6 +719,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8541. Mover should exit with NO_MOVE_PROGRESS if there is no move
     progress.  (Surendra Singh Lilhore via szetszwo)
 
+    HDFS-8742. Inotify: Support event for OP_TRUNCATE.
+    (Surendra Singh Lilhore via aajisaka)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
